# reco-agricole

./: .gitignore  Dockerfile.api  Dockerfile.webapp  README.md  docker-compose.yaml  pyproject.toml  report_fr.md
.github/workflows/: python-app.yaml
.streamlit/: config.toml
data/processed/: yield_df.csv
notebooks/: 0_eda.ipynb  1_feature_engineering.ipynb  2_fine-tuning.ipynb  3_report_plot.ipynb
src/: api.py  models.py  models_store.py  tests.py  webapp.py
