[project]
name = "reco-agricole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi-limiter>=0.2.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "optuna>=4.7.0",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.55.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "mlflow>=3.10.1",
]
