[project]
name = "reco-agricole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
]

[dependency-groups]
api = [
    "fastapi[standard]>=0.135.1",
    "slowapi>=0.1.9",
    "xgboost>=3.2.0",
    "shap>=0.51.0",
]
webapp = [
    "streamlit>=1.55.0",
    "streamlit-navigation-bar>=3.3.0",
    "plotly>=6.6.0",
    "requests>=2.32",
]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nbconvert>=7.17.0",
    "optuna>=4.7.0",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "mlflow>=3.10.1",
]